--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <h1>Projeto do Philipe Cunha</h1>
         <p>Teste de inclusao</p>
+        <p>Paragrafo 2</p>
     </body>
 </html>
