--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
         <link rel="stylesheet" href="estilo.css">
     </head>
     <body>
-        <h1>Projeto do Philipe Cunha</h1>
-        <p>Teste de inclusao</p>
-        <p>Paragrafo 2</p>
+        <h1>Titulo do site</h1>
+        <div>
+            Decidir Conteudo
+        </div>
+        <h1>
+            Decidir rodape
+        </h1>>
     </body>
 </html>
