--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="estilo.css">
+        <title>Titulo do Site</title>
     </head>
     <body>
         <h1>Titulo do site</h1>
